--- a/src/api/resources/assets/ancientapi/lang/en_us.json
+++ b/src/api/resources/assets/ancientapi/lang/en_us.json
@@ -5,5 +5,5 @@
   "magicType.generation_magic": "Generation",
   "magicType.high_magic": "High Magic",
   "magicType.ritual_magic": "Ritual",
-  "magicType.unnamed.4": ""
+  "magicType.unnamed.4": "The God"
 }
