--- a/src/main/resources/assets/ancientmagic/lang/en_us.json
+++ b/src/main/resources/assets/ancientmagic/lang/en_us.json
@@ -1,6 +1,8 @@
 {
   "compact.ancientmagic.waystones.no_essence": "The gods say they can't do anything because you don't have an offering for them.",
-  "compact.ancientmagic.waystones.tpItem": "",
+  "compact.ancientmagic.waystones.tpItem": "Is an offering for a gods. For teleportation",
+
+  "content.ancientmagic.added_by": "Added by addon: %s",
 
   "item.ancientmagic.magic.nomana": "Not enough mana! You can't use %s",
   "item.ancientmagic.magic.storage": "Mana storage: %s"
