--- a/src/main/resources/assets/ancientmagic/lang/en_us.json
+++ b/src/main/resources/assets/ancientmagic/lang/en_us.json
@@ -1,4 +1,12 @@
 {
+  "magicType.typeof": "Magic Type: %s",
+
+  "magicType.low_magic": "Low",
+  "magicType.medium_magic": "Medium",
+  "magicType.pre_high": "Pre High",
+  "magicType.high_magic": "High",
+  "magicType.unnamed.4": "The God",
+
   "compact.ancientmagic.waystones.no_essence": "The gods say they can't do anything because you don't have an offering for them.",
   "compact.ancientmagic.waystones.tpItem": "Is an offering for a gods. For teleportation",
 
