--- a/src/main/resources/assets/ancientmagic/lang/en_us.json
+++ b/src/main/resources/assets/ancientmagic/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "magicType.type": "§7Magic Type: %s",
+  "magicType.type": "§9Magic Type: %s",
   "magicType.subtype": "§1Magic Subtype: %s",
 
   "magicType.type.low_magic": "Low",
@@ -8,6 +8,8 @@
   "magicType.type.high_magic": "High",
   "magicType.type.superior": "Superior",
 
+  "magicType.type.storage": "Storage",
+
   "compact.ancientmagic.waystones.no_essence": "The gods say they can't do anything because you don't have an offering for them.",
   "compact.ancientmagic.waystones.tpItem": "Is an offering for a gods. For teleportation",
 
@@ -15,6 +17,7 @@
 
   "magic.ancientmagic.nomana": "Not enough mana! You can't use %s",
   "magic.ancientmagic.storage": "Mana storage: %s/%s",
+  "magic.ancientmagic.notLevel": "You can't use this item! Minimal level for use: %s§f. Your level is: %s§f.",
 
   "itemTab.ancientmagic.tab": "Ancient Magic",
 
