--- a/src/main/resources/assets/ancientmagic/lang/en_us.json
+++ b/src/main/resources/assets/ancientmagic/lang/en_us.json
@@ -18,6 +18,8 @@
   "magic.ancientmagic.nomana": "Not enough mana! You can't use %s",
   "magic.ancientmagic.storage": "Mana storage: %s/%s",
   "magic.ancientmagic.notLevel": "You can't use this item! Minimal level for use: %s§f. Your level is: %s§f.",
+  "magic.ancientmagic.admin.levelAdded": "Your level is upgraded! Current level: %s",
+  "magic.ancientmagic.admin.levelMax": "Your %s magic level is max!",
 
   "itemTab.ancientmagic.tab": "Ancient Magic",
 
