--- a/common/src/main/resources/assets/aeternus/lang/ru_ru.json
+++ b/common/src/main/resources/assets/aeternus/lang/ru_ru.json
@@ -15,7 +15,7 @@
 
   "_comment": "Ведра",
 
-  "item.aeternus.etherium_bucket": "Bucket of Eternal",
+  "item.aeternus.etherium_bucket": "Ведро вечности",
 
   "_comment": "Брони",
 
@@ -26,7 +26,7 @@
 
   "_comment": "Блоки",
 
-  "block.aeternus.etherium_fluid": "Eternal",
+  "block.aeternus.etherium_fluid": "Вечность",
 
   "_comment": "Жидкости",
 
