--- a/common/src/main/resources/assets/aeternus/lang/en_us.json
+++ b/common/src/main/resources/assets/aeternus/lang/en_us.json
@@ -1,6 +1,8 @@
 {
   "_comment": "Endings", "_comment": "DON'T TOUCH IT! ONLY FOR RUSSIAN TRANSLATE!",
 
+  "rat.aeternus.suffix": "",
+
   "rat.aeternus.male": "",
   "rat.aeternus.female": "",
   "rat.aeternus.medium": "",
