--- a/common/src/main/resources/assets/aeternus/lang/ru_ru.json
+++ b/common/src/main/resources/assets/aeternus/lang/ru_ru.json
@@ -1,6 +1,7 @@
 {
   "_comment": "Окончания",
 
+  "rat.aeternus.suffix": "ов",
   "rat.aeternus.male": "ый",
   "rat.aeternus.female": "ая",
   "rat.aeternus.medium": "ое",
